Fix <TopBar> on small screens
[MAILPOET-2780]

--- a/assets/css/src/components-plugin/_stats.scss
+++ b/assets/css/src/components-plugin/_stats.scss
@@ -43,10 +43,3 @@
     width: 100%;
   }
 }
-
-.wrap .mailpoet-top-bar {
-  margin-left: -20px;
-  margin-right: -20px;
-  margin-top: -10px;
-  position: relative;
-}
