--- a/assets/css/src/components/_top_bar.scss
+++ b/assets/css/src/components/_top_bar.scss
@@ -13,6 +13,20 @@ $beamer-dot-size: 8px;
   margin: 0 0 20px;
   padding-left: $grid-gap;
   padding-right: $grid-gap;
+
+  .wrap & {
+    margin-left: -20px;
+    margin-right: -20px;
+    margin-top: -10px;
+    position: relative;
+
+    @include respond-to(small-screen) {
+      margin-bottom: 40px;
+      margin-left: -10px;
+      margin-right: -12px;
+      top: -10px;
+    }
+  }
 }
 
 .mailpoet-top-bar-logo {
